--- a/index.html
+++ b/index.html
@@ -77,20 +77,23 @@
         <div class="slideshow-container">
           <!-- Full-width images with number and caption text -->
           <div class="mySlides fade">
-            <img src="assets/main-bg.jpg" style="width: 100%; height: 100%" />
+            <img
+              src="assets/rockpaperstrategy-1600.jpg"
+              style="width: 100%; height: 200px"
+            />
           </div>
 
           <div class="mySlides fade">
             <img
               src="assets/bg-feature.png"
-              style="width: 100%; height: 100%"
+              style="width: 100%; height: 200px"
             />
           </div>
 
           <div class="mySlides fade">
             <img
               src="assets/newsletter.png"
-              style="width: 100%; height: 100%"
+              style="width: 100%; height: 200px"
             />
           </div>
           <!-- Next and previous buttons -->
